# backend/openAPI.yaml
@@ -1239,7 +1239,7 @@ paths:
 
   /avaliations:
     post:
-      summary: Creates an avaliation.
+      summary: Creates an avaliation set.
       tags:
         - avaliations
       security:
@@ -1255,41 +1255,48 @@ paths:
                     type: string
                     format: uuid
                     example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  project_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                  projects:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        project_id:
+                          type: string
+                          format: uuid
+                          example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
       responses:
         '200':
-          description: Returns a JSON containing the created avaliation.
+          description: Returns a JSON containing the created avaliation set.
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  evaluator_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  project_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  status:
-                    type: string
-                    example: "to_evaluate"
-                  created_at:
-                    type: string
-                    format: dateformat
-                    example: "2020-07-02T21:57:00.421Z"
-                  updated_at:
-                    type: string
-                    format: dateformat
-                    example: "2020-07-02T21:57:00.421Z"
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    evaluator_id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    project_id:
+                      type: string
+                      format: uuid
+                      example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
+                    status:
+                      type: string
+                      example: "to_evaluate"
+                    created_at:
+                      type: string
+                      format: dateformat
+                      example: "2020-07-02T21:57:00.421Z"
+                    updated_at:
+                      type: string
+                      format: dateformat
+                      example: "2020-07-02T21:57:00.421Z"
   /avaliations/{id}:
     put:
       summary: Updates an avaliation.
