# backend/src/modules/avaliations/dtos/ICreateAvaliationsRequest.ts
@@ -1,0 +1,7 @@
+export default interface ICreateOrUpdateAvaliationDTO {
+  evaluator_id: string;
+  projects: {
+    project_id: string;
+    status?: 'to_evaluate' | 'rated';
+  }[];
+}
